--- a/lab_02/docker-compose.yml
+++ b/lab_02/docker-compose.yml
@@ -8,3 +8,13 @@ services:
     ports:
       - "8000:8000"
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+  email_service:
+    build:
+      context: ./mail_service
+    container_name: email_service
+    depends_on:
+      - user_service
+    ports:
+      - "8001:8001"
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
