--- a/lab_02/docker-compose.yml
+++ b/lab_02/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   email_service:
     build:
-      context: ./mail_service
+      context: ./email_service
     container_name: email_service
     depends_on:
       - user_service
